Commit Finish CatalogApi

--- a/Src/Services/Catalog/Catalog.API/appsettings.json
+++ b/Src/Services/Catalog/Catalog.API/appsettings.json
@@ -1,7 +1,7 @@
 {
   "DataBaseSettings": {
-    "ConnectionString": "mangodb://localhost:27017",
-    "DataBaseName": "ProductDb",
+    "ConnectionString": "mongodb://localhost:27017",
+    "DataBaseName": "CatalogDb",
     "CollectionName": "Products"
   },
   "Logging": {
