--- a/Src/Services/Catalog/Catalog.API/appsettings.Development.json
+++ b/Src/Services/Catalog/Catalog.API/appsettings.Development.json
@@ -1,4 +1,9 @@
 {
+  "DataBaseSettings": {
+    "ConnectionString": "mongodb://catalogdb:27017",
+    "DataBaseName": "CatalogDb",
+    "CollectionName": "Products"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
