--- a/Src/Services/Basket/Basket.API/appsettings.json
+++ b/Src/Services/Basket/Basket.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "CacheSettings": {
+    "ConnectionStrings": "localhost:6379"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
