--- a/Src/Services/Basket/Basket.API/appsettings.json
+++ b/Src/Services/Basket/Basket.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "CacheSettings": {
-    "ConnectionStrings": "localhost:6379"
+    "ConnectionString": "localhost:6379"
   },
   "Logging": {
     "LogLevel": {
