--- a/Src/docker-compose.yml
+++ b/Src/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.4'
 
 services:
   catalogdb:
-      image: mongo
+    image: mongo
 
   basketdb:
     image: redis:alpine
@@ -28,8 +28,15 @@ services:
       context: .
       dockerfile: Services/Basket/Basket.API/Dockerfile
 
+  discount.api:
+    image: ${DOCKER_REGISTRY-}discountapi
+    build:
+      context: .
+      dockerfile: Services/Discount/Discount.API/Dockerfile
+
 volumes:
   mongo_data:
   portainer_data:
   postgres_data:
   pgadmin_data:
+
