Create DiscountService Grpc

--- a/Src/Services/Discount/Discount.Grpc/Discount.Grpc.csproj
+++ b/Src/Services/Discount/Discount.Grpc/Discount.Grpc.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Protos\discount.proto" />
+  </ItemGroup>
+
+  <ItemGroup>
+	  <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
 	  <PackageReference Include="Dapper" Version="2.0.123" />
 	  <PackageReference Include="Npgsql" Version="5.0.11" />
 	  <PackageReference Include="Grpc.AspNetCore" Version="2.34.0" />
@@ -12,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <Protobuf Include="Protos\discount.proto" GrpcServices="Server" />
   </ItemGroup>
 
 </Project>
